--- a/src/components/Header/headerLogo.scss
+++ b/src/components/Header/headerLogo.scss
@@ -5,10 +5,13 @@
 	height: 100%;
 	max-height: 54px;
 	width: 48.5px;
-
-	.line {
-		position: fixed;
-		border: 1px solid #ffff00;
+	@include adaptive(x05) {
+		left: $framePaddingX05;
+		top: $framePaddingX05;
+	}
+	@include adaptive(x025) {
+		left: $framePaddingX025;
+		top: $framePaddingX025;
 	}
 
 	#svgLogo {
