HOC animation, @decorators

--- a/src/components/Content/Contacts/contacts.scss
+++ b/src/components/Content/Contacts/contacts.scss
@@ -1,3 +1,11 @@
- .contacts {
+ .page-contacts {
 	 color: darkgoldenrod;
+
+	 .Changer_before{
+		 opacity: 0;
+		 transition: .3s;
+	 }
+	 .Changer_after{
+		 opacity: 1;
+	 }
  }
