--- a/src/components/Content/Project/project.scss
+++ b/src/components/Content/Project/project.scss
@@ -10,4 +10,14 @@
 		color: $specialBlack;
 		height: 100%;
 	}
+
+	&.appear_before {
+		transition: .5s;
+		opacity: 0;
+		margin-top: 30px;
+	}
+	&.appear_after {
+		opacity: 1;
+		margin-top: 0px;
+	}
 }
