--- a/src/components/Header/headerLogo.scss
+++ b/src/components/Header/headerLogo.scss
@@ -17,4 +17,31 @@
 	#svgLogo {
 		position: absolute;
 	}
+
+	&.appear_before {
+		transition: .3s;
+		margin-left: -50px;
+		opacity: 0;
+
+		svg {
+			#white path {
+				transition: .3s;
+				fill: #CCD;
+			}
+		}
+	}
+	&.appear_after {
+		margin-left: 0;
+		opacity: 1;
+
+		svg {
+			#white path {
+				fill: #67d939;
+			}
+		}
+	}
+	&.leave_animation {
+		margin-left: -50px !important;
+		opacity: 0 !important;
+	}
 }
