--- a/src/App.scss
+++ b/src/App.scss
@@ -17,28 +17,41 @@
 		font-weight: 700;
 		font-size: 84px;
 		line-height: 80px;
+		margin: 40px;
+		margin-left: -0.6%;
+
 	}
 
 	h2 {
 		font-size: 77px;
 		line-height: 80px;
+		margin: 0;
+		margin-left: -0.5%;
 	}
 
 	h3 {
 		font-size: 51px;
 		line-height: 60px;
+		margin: 0;
+
 	}
 	h4 {
 		font-size: 35px;
 		line-height: 60px;
+		margin: 0;
+
 	}
 	h5 {
 		font-size: 20px;
 		line-height: 26px;
+		margin: 0;
+
 	}
 	h6 {
 		font-size: 15px;
 		line-height: 30px;
+		margin: 0;
+
 	}
 
 }
