logo scroll animation new version

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:500,700');
 
 #app {
-	position: absolute;
+	position: fixed;
 	left: 0;
 	right: 0;
 	overflow: hidden;
