--- a/src/components/Content/content.scss
+++ b/src/components/Content/content.scss
@@ -1,5 +1,6 @@
 
 .scroll {
+	overflow: hidden;
 	overflow-y: scroll;
 	height: 100%;
 	-webkit-overflow-scrolling: touch;
@@ -11,6 +12,8 @@
 	max-height: 100vh;
 	.contentContainer {
 		height: 100%;
+		max-height: 330px;
+		width: 100%;
 		display: flex;
 		flex-flow: column;
 		max-width: 1280px;
