--- a/src/components/Content/Main/main.scss
+++ b/src/components/Content/Main/main.scss
@@ -32,7 +32,9 @@
 
 		}
 		.services {
-			margin: auto 0 $framePaddingX1
+			margin: auto 0 $framePaddingX1;
+			padding:0;
+			list-style: none;
 		}
 
 	}
