--- a/src/components/Content/Works/works.scss
+++ b/src/components/Content/Works/works.scss
@@ -23,6 +23,7 @@
 		min-height: 90vh;
 		color: #FFF;
 		display: flex;
+		flex-direction: column;
 	}
 	.otherScreen {
 		background-color: #FFFFFF;
