--- a/src/components/Content/content.scss
+++ b/src/components/Content/content.scss
@@ -4,12 +4,49 @@
 	overflow-y: scroll;
 	height: 100%;
 	-webkit-overflow-scrolling: touch;
-
 }
 
 .main {
 	height: 100%;
 	max-height: 100vh;
+	.headerContainer {
+		display: flex;
+		width: 100%;
+		flex-flow: column;
+		max-width: 1280px;
+		margin: auto;
+		color: #FFF;
+		@include adaptive(x1) {
+			padding: $framePaddingX1;
+			line-height: $logoH+px;
+			margin-bottom: -$framePaddingX1*2 + $logoH
+		}
+		@include adaptive(x2) {
+			padding: $framePaddingX2;
+			line-height: $logoH * 1.2+px;
+			margin-bottom: -$framePaddingX2*2 + $logoH
+
+		}
+		@include adaptive(xx) {
+			padding: $framePaddingXx;
+			line-height: $logoH * 1.4+px;
+			margin-bottom: -$framePaddingXx*2 + $logoH
+
+		}
+		@include adaptive(x05) {
+			padding: $framePaddingX05;
+			line-height: $logoH * .8+px;
+			margin-bottom: -$framePaddingX05*2 + $logoH
+
+		}
+		@include adaptive(x025) {
+			padding: $framePaddingX025;
+			line-height: $logoH * .6+px;
+			margin-bottom: -$framePaddingX025*2 + $logoH
+
+		}
+
+	}
 	.contentContainer {
 		height: 100%;
 		width: 100%;
@@ -22,6 +59,9 @@
 		}
 		@include adaptive(x2) {
 			padding: 0 $framePaddingX2;
+		}
+		@include adaptive(xx) {
+			padding: 0 $framePaddingXx;
 		}
 		@include adaptive(x05) {
 			padding: 0 $framePaddingX05;
