--- a/src/components/Content/content.scss
+++ b/src/components/Content/content.scss
@@ -9,41 +9,37 @@
 .main {
 	height: 100%;
 	max-height: 100vh;
-	.headerContainer {
+	.contentTitle {
 		display: flex;
+		position: absolute;
 		width: 100%;
 		flex-flow: column;
 		max-width: 1280px;
-		margin: auto;
 		color: #FFF;
 		@include adaptive(x1) {
 			padding: $framePaddingX1;
 			line-height: $logoH+px;
-			margin-bottom: -$framePaddingX1*2 + $logoH
+			left: $framePaddingX2;
 		}
 		@include adaptive(x2) {
-			padding: $framePaddingX2;
+			padding: $framePaddingX2 $framePaddingX1 ;
 			line-height: $logoH * 1.2+px;
-			margin-bottom: -$framePaddingX2*2 + $logoH
-
+			left: $framePaddingXx;
 		}
 		@include adaptive(xx) {
 			padding: $framePaddingXx;
 			line-height: $logoH * 1.4+px;
-			margin-bottom: -$framePaddingXx*2 + $logoH
-
+			left: $framePaddingXx;
 		}
 		@include adaptive(x05) {
 			padding: $framePaddingX05;
 			line-height: $logoH * .8+px;
-			margin-bottom: -$framePaddingX05*2 + $logoH
-
+			left: $framePaddingX1;
 		}
 		@include adaptive(x025) {
 			padding: $framePaddingX025;
 			line-height: $logoH * .6+px;
-			margin-bottom: -$framePaddingX025*2 + $logoH
-
+			left: $framePaddingX05;
 		}
 
 	}
