onEvent HOC work with all

--- a/src/App.scss
+++ b/src/App.scss
@@ -17,41 +17,34 @@
 		font-weight: 700;
 		font-size: 84px;
 		line-height: 80px;
-		margin: 40px;
-		margin-left: -0.08em;
-
+		margin: 40px 40px 40px -0.085em;
 	}
 
 	h2 {
 		font-size: 77px;
 		line-height: 80px;
-		margin: 0;
-		margin-left: -0.08em;
+		margin: 0 0 0 -0.085em;
 	}
 
 	h3 {
 		font-size: 51px;
 		line-height: 60px;
-		margin: 0;
-
+		margin: 0 0 0 -0.085em;
 	}
 	h4 {
 		font-size: 35px;
 		line-height: 60px;
-		margin: 0;
-
+		margin: 0 0 0 -0.085em;
 	}
 	h5 {
 		font-size: 20px;
 		line-height: 26px;
-		margin: 0;
-
+		margin: 0 0 0 -0.085em;
 	}
 	h6 {
 		font-size: 15px;
 		line-height: 30px;
-		margin: 0;
-
+		margin: 0 0 0 -0.085em;
 	}
 
 	a {
