--- a/src/components/Menu/menu.scss
+++ b/src/components/Menu/menu.scss
@@ -1,6 +1,7 @@
 .menu {
 	position: fixed;
 	display: flex;
+	flex-direction: column;
 	writing-mode: vertical-lr;
 	color: #99D9D9;
 	z-index: 10;
@@ -27,4 +28,47 @@
 	a {
 		padding: 10px 0;
 	}
+	&.appear_before {
+		div {
+			transform: translateX(50px);
+			opacity: 0;
+		}
+	}
+	&.appear_after {
+		transform: translateX(0);
+		opacity: 1;
+		div {
+			transition: .2s ease .0s;
+			transform: translateX(0);
+			opacity: 1;
+
+			&:nth-child(1) {
+				transition-delay: .1s;
+			}
+			&:nth-child(2) {
+				transition-delay: .2s;
+			}
+			&:nth-child(3) {
+				transition-delay: .3s;
+			}
+		}
+	}
+	&.leave_animation {
+
+		div {
+			transition: .2s ease;
+			transform: translateX(50px) !important;
+			opacity: 0 !important;
+			&:nth-child(1) {
+				transition-delay: .22s;
+			}
+			&:nth-child(2) {
+				transition-delay: .16s;
+			}
+			&:nth-child(3) {
+				transition-delay: .1s;
+			}
+		}
+	}
+
 }
