--- a/src/components/Content/Main/main.scss
+++ b/src/components/Content/Main/main.scss
@@ -2,6 +2,14 @@
 	height: 100%;
 	max-height: 100vh;
 	width: 100%;
+	transition: .2s ease;
+	&.appear_before {
+		opacity: 0;
+	}
+	&.appear_after {
+		opacity: 1;
+		transition: .2s ease;
+	}
 	.project {
 		height: 100%;
 		background: no-repeat 50%;
@@ -32,7 +40,7 @@
 
 		}
 		.services {
-			padding:0;
+			padding: 0;
 			list-style: none;
 			@include adaptive(x1) {
 				margin: auto 0 $framePaddingX1;
