--- a/src/components/Content/Works/works.scss
+++ b/src/components/Content/Works/works.scss
@@ -9,17 +9,15 @@
 
 	.list {
 		height: 100%;
-		display: flex;
-		flex-flow: column;
-		justify-content: center;
-		padding: 0;
+		padding: 160px 0;
 		list-style: none;
 		color: #FFF;
 		li {
-			margin: 30px 0;
+			margin: 70px 0;
 			width: fit-content;
 			&:hover {
-				color: #999
+				color: #999;
+				transition: .2s ease;
 			}
 		}
 		h1, h2,h3,h4,h5,h6 {
