--- a/src/components/Menu/menu.scss
+++ b/src/components/Menu/menu.scss
@@ -48,10 +48,13 @@
 				transition-delay: .1s;
 			}
 			&:nth-child(2) {
-				transition-delay: .2s;
+				transition-delay: .16s;
 			}
 			&:nth-child(3) {
-				transition-delay: .3s;
+				transition-delay: .22s;
+			}
+			&:nth-child(4) {
+				transition-delay: .28s;
 			}
 		}
 	}
@@ -60,6 +63,7 @@
 			transition: .2s ease;
 			transform: translateX(50px) !important;
 			opacity: 0 !important;
+			transition-delay: .28s;
 			&:nth-child(1) {
 				transition-delay: .22s;
 			}
@@ -68,6 +72,9 @@
 			}
 			&:nth-child(3) {
 				transition-delay: .1s;
+			}
+			&:nth-child(4) {
+				transition-delay: .04s;
 			}
 		}
 	}
