--- a/src/components/Content/Main/main.scss
+++ b/src/components/Content/Main/main.scss
@@ -36,15 +36,25 @@
 		}
 
 		.headers {
-			margin: auto 0 -80px
+
+			position: fixed;
+			height: 100%;
+			display: flex;
+			justify-content: center;
+			flex-direction: column;
+			h5 {
+				font-weight: 500;
+			}
 		}
 
 		a:hover h1{
 			color: #999999;
 		}
 		.services {
+
 			padding: 0;
 			list-style: none;
+			font-size: 15px;
 			@include adaptive(x1) {
 				margin: auto 0 $framePaddingX1;
 			}
