--- a/src/components/Content/About/about.scss
+++ b/src/components/Content/About/about.scss
@@ -1,11 +1,4 @@
 .page-about {
-	h1,h2 {
-		font-weight: 600;
-	}
-	h3, h4, h5, h6 {
-		margin: 0;
-		font-weight: 400;
-	}
 	.content {
 		color: #FFF;
 		padding: 420px 0;
@@ -36,7 +29,7 @@
 		}
 
 		.dark {
-			color: #303336;
+			color: $specialDark;
 			span {
 				color: #FFF;
 			}
