--- a/src/components/Content/Contacts/contacts.scss
+++ b/src/components/Content/Contacts/contacts.scss
@@ -15,12 +15,37 @@
 		}
 		form {
 			max-width: 300px;
+			label {
+				z-index: 8;
+				position: relative;
+				display: block;
+				color: $specialDark;
+				transform: translateY(-90%);
+				transition: .2s ease;
+			}
 			input {
+				z-index: 9;
+				position: relative;
 				font-size: 140%;
 				background-color: transparent;
 				color: #FFF;
-				border: 0;
 				outline: none;
+				border: 0;
+				&:focus {
+					& + label {
+						transform: translateY(-200%);
+					}
+				}
+			}
+			.send {
+				display: flex;
+				align-items: center;
+				cursor: pointer;
+				width: fit-content;
+				img {
+					height: 30px;
+					margin-right: 20px;
+				}
 			}
 		}
 
