--- a/src/components/Content/Contacts/contacts.scss
+++ b/src/components/Content/Contacts/contacts.scss
@@ -4,11 +4,14 @@
 		height: 100%;
 		display: flex;
 		flex-flow: column;
-		justify-content: center;
-		padding: 420px 0;
+		justify-content: flex-start;
+		padding: 40vh 0 0;
+		h1 {
+			margin: 20px 0
+		}
 		.dark {
 			color: $specialDark;
-			margin: 100px 0;
+			margin: 0 0 100px 0;
 			span {
 				color: #FFF
 			}
@@ -25,6 +28,7 @@
 				opacity: 1;
 			}
 			input {
+				font-family: inherit;
 				z-index: 9;
 				position: relative;
 				font-size: 140%;
