--- a/src/components/Menu/menu.scss
+++ b/src/components/Menu/menu.scss
@@ -4,7 +4,6 @@
 	flex-direction: column;
 	color: #FFF;
 	z-index: 10;
-	transition: 1s ease;
 	width: 40px;
 	height: 100%;
 	max-height: 40px;
@@ -40,68 +39,122 @@
 		outline: 1px solid currentColor;
 		cursor: pointer;
 		margin-left: auto;
-		transition: 1s ease;
+		transition: .2s ease;
+		z-index: 10;
+		//ANIMATION
+
+		&.appear_before {
+			transform: translateX(50px);
+			opacity: 0;
+		}
+		&.appear_after {
+			transform: translateX(0);
+			opacity: 1;
+
+		}
+		&.leave_animation {
+			transform: translateX(50px);
+			opacity: 0;
+		}
 	}
 
 	a {
 		padding: 10px 0;
 	}
 
-
 	nav {
-		visibility: hidden;
-	}
+		position: fixed;
+		height: 100vh;
+		width: 50vw;
+		transform: translateX(100%);
+		transition: transform $Transition;
+		background-color: #131517;
+		top: 0;
+		right: 0;
 
-
-
-	//ANIMATION
-
-	&.appear_before {
-		a {
-			transform: translateX(50px);
-			opacity: 0;
-		}
-	}
-	&.appear_after {
-		transform: translateX(0);
-		opacity: 1;
-		a {
-			transition: .2s ease .0s;
-			transform: translateX(0);
-			opacity: 1;
-
-			&:nth-child(1) {
-				transition-delay: .1s;
-			}
-			&:nth-child(2) {
-				transition-delay: .16s;
-			}
-			&:nth-child(3) {
-				transition-delay: .22s;
-			}
-			&:nth-child(4) {
-				transition-delay: .28s;
-			}
-		}
-	}
-	&.leave_animation {
-		a {
-			transition: .2s ease;
-			transform: translateX(50px) !important;
-			opacity: 0 !important;
-			transition-delay: .28s;
-			&:nth-child(1) {
-				transition-delay: .22s;
-			}
-			&:nth-child(2) {
-				transition-delay: .16s;
-			}
-			&:nth-child(3) {
-				transition-delay: .1s;
-			}
-			&:nth-child(4) {
-				transition-delay: .04s;
+		&.visible {
+			transform: translateX(0%);
+			.nav__menu {
+				li div {
+					display: block;
+					transition: $Transition;
+					transform: translateY(0%);
+				}
+				li:nth-child(1) div {
+					transition-delay: 0s
+				}
+				li:nth-child(2) div {
+					transition-delay: 0.08s
+				}
+				li:nth-child(3) div {
+					transition-delay: 0.16s
+				}
+				li:nth-child(4) div {
+					transition-delay: 0.24s
+				}
+				li:nth-child(5) div {
+					transition-delay: 0.32s
+				}
+				li:nth-child(6) div {
+					transition-delay: 0.32s
+				}
+				li:nth-child(7) div {
+					transition-delay: 0.32s
+				}
 			}
 		}
+
+		.nav__menu {
+			position: fixed;
+			top: 0;
+			right: 0;
+			width: 100%;
+			height: 100%;
+			display: flex;
+			flex-direction: column;
+			list-style: none;
+			font-size: 4.188em;
+			line-height: 120px;
+			font-weight: bold;
+			margin: 0;
+			padding: 0;
+			justify-content: center;
+			li {
+				overflow: hidden;
+				margin: 0.2em 0;
+				div {
+					transition-delay: 0s;
+					display: block;
+					transform: translateY(-100%);
+					transition: $Transition;
+					line-height: 113%;
+					width: fit-content;
+					a {
+						line-height: 100%;
+						transition: $Transition;
+						&:hover {
+							color: #999;
+						}
+					}
+				}
+				@include adaptive(xx) {
+					margin-left: $framePaddingXx;
+				}
+				@include adaptive(x2) {
+					margin-left: $framePaddingX2;
+				}
+				@include adaptive(x1) {
+					margin-left: $framePaddingX1;
+				}
+				@include adaptive(x05) {
+					margin-left: $framePaddingX05;
+				}
+				@include adaptive(x025) {
+					margin-left: $framePaddingX025;
+				}
+
+			}
+		}
 	}
+
 }
