h1 hover main page

--- a/src/App.scss
+++ b/src/App.scss
@@ -16,7 +16,7 @@ h1 {
 	font-weight: 700;
 	font-size: 84px;
 	line-height: 80px;
-	margin: 40px 40px 40px -0.085em;
+	margin: 40px 40px 40px 0;
 }
 
 h2 {
